--- a/client/components/FileUpload.module.css
+++ b/client/components/FileUpload.module.css
@@ -14,22 +14,11 @@
 
 /* Style for the file input */
 .input[type="file"] {
-  border: 1px solid #ccc;
-  display: inline-block;
-  padding: 6px 12px;
-  cursor: pointer;
+  padding: 10px;
 }
 
 .label {
-  background-color: #4CAF50; /* Green */
-  border: none;
-  color: white;
-  padding: 15px 32px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 16px;
-  margin: 4px 2px;
-  cursor: pointer;
+  font-size: 20px;
+  padding-left: 5px;
+  padding-top: 5px;
 }
-
