--- a/client/components/ProcessButton.module.css
+++ b/client/components/ProcessButton.module.css
@@ -1,13 +1,6 @@
-.container {
-  margin: 10px;
-  padding: 10px;
-  border: 1px solid #ccc;
-  border-radius: 8px;
-  background-color: #f5f5f5;
-}
-
 .button {
   display: inline-block;
+  margin-left: 10px;
   padding: 10px 20px;
   font-size: 16px;
   font-weight: bold;
@@ -26,14 +19,4 @@
 
 .button:active {
   background-color: #004080;
-}
-
-.input[type="file"] {
-  padding: 10px;
-}
-
-.label {
-  font-size: 20px;
-  padding-left: 5px;
-  padding-top: 5px;
 }
