--- a/client/components/ProcessButton.module.css
+++ b/client/components/ProcessButton.module.css
@@ -1,6 +1,20 @@
+.container {
+  display: flex;
+  flex-direction: row;
+  margin: 10px;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.optionsContainer {
+  border: 1px solid #ccc;
+  border-radius: 8px;
+  background-color: #f5f5f5;
+  padding: 8px;
+}
+
 .button {
   display: inline-block;
-  margin-left: 10px;
   padding: 10px 20px;
   font-size: 16px;
   font-weight: bold;
@@ -19,4 +33,24 @@
 
 .button:active {
   background-color: #004080;
+}
+
+.select {
+  display: inline-block;
+  padding: 10px 20px;
+  font-size: 16px;
+  font-weight: bold;
+  text-align: center;
+  text-decoration: none;
+  background-color: #007bff;
+  color: #fff;
+  border: none;
+  border-radius: 8px;
+  cursor: pointer;
+}
+
+.input[type="text"] {
+  border: 1px solid #ccc;
+  border-radius: 8px;
+  margin: 10px;
 }
